--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,5 @@ EMAIL_SERVER_PORT=
 EMAIL_SERVER_USER=
 EMAIL_SERVER_PASSWORD=
 EMAIL_FROM=
+EMAIL_PASS=oyru amvs qbpj qhwo
+EMAIL_USER=ifeeleerie@gmail.com
