--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.0.1",
     "date-fns": "^3.4.0",
     "gray-matter": "^4.0.3",
+    "lottie-react": "^2.4.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.5",
     "next-themes": "^0.3.0",
