--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.4",
     "@prisma/client": "^5.11.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.6.2",
@@ -19,6 +22,7 @@
     "lottie-react": "^2.4.1",
     "next": "^14.1.3",
     "next-auth": "^4.24.5",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
     "prettier": "^3.1.0",
